<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">CircleToFormAnimation</string>
    <string name="title">Lorem Ipsum</string>
    <string name="sub_title" tools:ignore="TypographyEllipsis">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>
    <string name="paragraphy_01" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in mauris sit amet lacus interdum scelerisque id porta ipsum. Phasellus dictum aliquam arcu ac porttitor. Maecenas at purus sed leo aliquam bibendum vel vulputate magna. Duis lobortis ligula sit amet commodo tincidunt. Nam iaculis sit amet quam at consectetur. Cras nec magna convallis, hendrerit arcu pellentesque, dapibus elit. Ut rhoncus commodo mi, id pellentesque leo rutrum id. Nam et mi dolor. Vestibulum pharetra diam diam, eget ullamcorper neque condimentum ut. Vestibulum lacus erat, elementum nec sem at, aliquam consectetur leo. Praesent viverra massa sit amet nibh scelerisque consectetur. Cras eu leo quis risus hendrerit malesuada. Donec quam elit, vehicula non semper in, cursus eu lectus. Sed hendrerit, libero eget iaculis ullamcorper, diam elit viverra risus, ac iaculis erat ipsum ac massa. Proin tempus euismod arcu, ultrices auctor leo volutpat eu. Praesent placerat ante ac erat vulputate luctus.</string>
    <string name="paragraphy_02">Etiam eu vestibulum diam. Nullam mollis pellentesque risus sed rhoncus. Praesent vitae ligula euismod erat mattis aliquam. Nulla ac velit sed eros mattis fermentum. Nunc tincidunt felis a ante lobortis dictum. Praesent eget hendrerit libero. Donec bibendum semper tincidunt. Nunc sed dui sapien. Donec egestas mattis eros, ac congue nunc consequat non. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed a bibendum dolor, vitae convallis sapien. Nunc eu dignissim diam. Nam at dolor ut erat gravida congue sit amet eu lectus. Nam tristique sodales tortor, ut molestie urna congue quis.</string>
    <string name="paragraphy_03">Curabitur eros metus, adipiscing non porta quis, pellentesque sit amet lectus. Donec ultricies blandit massa vitae rutrum. Nullam ante mi, lacinia sit amet nisl in, dictum ullamcorper massa. Donec vehicula magna dignissim, porta diam luctus, consequat felis. Quisque nisl lorem, varius ut facilisis a, porttitor mattis velit. Sed auctor mauris erat, eget fringilla dolor facilisis eget. Curabitur tristique placerat eros in varius. Cras id tempor risus. Donec orci nulla, porttitor id elit at, facilisis posuere diam. Sed blandit fringilla nisl, vitae aliquet libero bibendum sit amet. Sed imperdiet vestibulum felis, sed lacinia diam condimentum in. Quisque non dui id enim sollicitudin dictum sollicitudin non turpis. Nam vulputate est ut tincidunt elementum. Duis ornare rhoncus cursus. Donec ipsum lorem, hendrerit ut lacus eu, laoreet eleifend quam.</string>
    <string name="paragraphy_04">Suspendisse accumsan urna vel diam porttitor, in congue est ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent placerat dui vitae nulla congue, id iaculis nibh volutpat. Phasellus bibendum ligula vulputate nulla dignissim, ut hendrerit massa malesuada. Duis sed consectetur risus, a commodo massa. Donec congue rhoncus lacus quis scelerisque. Phasellus nec lacinia massa, non eleifend metus. Sed risus sapien, pharetra at nibh non, euismod pellentesque nisl. Etiam ut neque ante. Aliquam interdum consequat turpis ac rhoncus. Duis nec nibh id erat bibendum luctus.</string>
    <string name="paragraphy_05">Morbi lectus mi, malesuada vel aliquam vitae, venenatis quis tortor. Nunc imperdiet eu ante et cursus. Phasellus tristique bibendum felis eu viverra. Donec tempus eleifend aliquet. Pellentesque volutpat porta nisl, fermentum volutpat lacus egestas id. Mauris viverra vel nisi vel dictum. Proin vulputate justo eu turpis convallis, vitae congue velit mollis. Sed facilisis nisi aliquet, ultrices felis vel, rutrum metus. Aliquam quis rutrum turpis. Integer ligula ipsum, vulputate et volutpat sit amet, tincidunt non velit. Nullam ac fermentum augue, interdum dapibus turpis. Aenean et vestibulum lectus. Curabitur elementum nisi id nisi porttitor tempor. Pellentesque mauris mi, sollicitudin vel arcu nec, mollis accumsan velit.</string>
    <string name="address_by_postal_code">Address by Postal Code</string>
    <string name="postal_code_by_address">Postal Code by Address</string>
    <string name="todo">TODO</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
